--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ bcrypt==3.1.3
 blessings==1.6
 cffi==1.10.0
 click==6.7
+docopt==0.6.2
 extras==1.0.0
 fixtures==3.0.0
 Flask==0.12.2
@@ -11,6 +12,7 @@ Flask-Babel==0.11.2
 Flask-Bcrypt==0.7.1
 Flask-Locale==1.0.2
 Flask-Login==0.4.0
+Flask-Session==0.3.1
 Flask-SQLAlchemy==2.2
 future==0.16.0
 fuzzywuzzy==0.15.1
