--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,5 @@
-Babel==2.4.0
-Flask==0.12.2
-Flask-Babel==0.11.2
-Flask-Bcrypt==0.7.1
-Flask-Locale==1.0.2
-Flask-Login==0.4.0
-Flask-Session==0.3.1
-Flask-SQLAlchemy==2.2
-Jinja2==2.9.6
-MarkupSafe==1.0
-SQLAlchemy==1.1.12
-SQLAlchemy-Utils==0.32.14
-SQLAlchemy-i18n==1.0.3
-Werkzeug==0.12.2
 aloe==0.1.12
-argparse==1.4.0
+Babel==2.4.0
 bcrypt==3.1.3
 blessings==1.6
 cffi==1.10.0
@@ -21,14 +7,26 @@ click==6.7
 docopt==0.6.2
 extras==1.0.0
 fixtures==3.0.0
+Flask==0.12.2
+Flask-Babel==0.11.2
+Flask-Bcrypt==0.7.1
+Flask-Locale==1.0.2
+Flask-Login==0.4.0
+Flask-Session==0.3.1
+Flask-SQLAlchemy==2.2
 future==0.16.0
 fuzzywuzzy==0.15.1
 gherkin-official==4.1.3
+gunicorn==19.7.1
 itsdangerous==0.24
+Jinja2==2.9.6
+jsondiff==1.1.1
 linecache2==1.0.0
+MarkupSafe==1.0
 mock==2.0.0
 nose==1.3.7
 pbr==3.1.1
+pkg-resources==0.0.0
 pycparser==2.18
 python-mimeparse==1.6.0
 python-subunit==1.2.0
@@ -36,7 +34,11 @@ pytz==2017.2
 repoze.lru==0.6
 six==1.10.0
 speaklater==1.3
+SQLAlchemy==1.1.12
+SQLAlchemy-i18n==1.0.3
+SQLAlchemy-Utils==0.32.14
 sure==1.4.6
 testtools==2.3.0
 traceback2==1.4.0
 unittest2==1.1.0
+Werkzeug==0.12.2
